--- a/styleSheets/indexStyles.css
+++ b/styleSheets/indexStyles.css
@@ -1,28 +1,74 @@
-body {
+html, body {
+	height: 100%;
 	margin: 0;
+	background-color: #262626;
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	color: white;
+	font-size: 100%;
+	font-family: "Ubuntu", sans-serif;
 }
-#nav {
+section {
 	width: 100%;
-	height: 10vh;
+	height: 100%;
+	position: relative;
+}
+span {
+	display: block;
 	text-align: center;
 }
-ul {
+.name {
+	text-transform: uppercase;
+	color: #c4351f;
+	line-height: 75%;
+}
+#first {
+	font-size: 4.1rem;
+}
+#last {
+	font-size: 7.6rem;
+	font-weight: 400;
+	line-height: 70%;
+	letter-spacing: -0.5rem;
+}
+#one8T {
+	display: inline;
+}
+#title {
+	font-family: "Poiret One", cursive;
+}
+#deskTitle {
+	display: none;
+}
+#main h1, #nav ul {
+	width: 100%;
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	margin: 0;
 	padding: 0;
 }
 li {
 	display: inline-block;
-	line-height: 10vh;
 }
 a {
 	text-decoration: none;
+	padding-bottom: 12%;
+	font-size: 1.2rem;
+	text-transform: uppercase;
+	vertical-align: middle;
+	color: #c4351f;
 }
-#main {
-	width: 100%;
-	height: 90vh;
-	text-align: right;
+a:hover {
+	border-bottom: solid white 1px;
 }
-h1 {
-	line-height: 90vh;
-	margin: 0;
+.slash {
+	font-family: "Work Sans", sans-serif;
+	margin: 0 3% 0 3%;
+	font-size: 3rem;
+	color: #c4351f;
+	vertical-align: middle;
 }
