--- a/styleSheets/indexStyles.css
+++ b/styleSheets/indexStyles.css
@@ -3,8 +3,6 @@ html, body {
 	margin: 0;
 	background-color: #262626;
 	background-size: 100% 100%;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
 	color: white;
 	font-size: 100%;
 	font-family: "Ubuntu", sans-serif;
@@ -24,7 +22,8 @@ span {
 	line-height: 75%;
 }
 #first {
-	font-size: 4.1rem;
+	font-size: 4.05rem;
+	margin-left: 0.5%;
 }
 #last {
 	font-size: 7.6rem;
@@ -32,11 +31,10 @@ span {
 	line-height: 70%;
 	letter-spacing: -0.5rem;
 }
-#one8T {
-	display: inline;
-}
 #title {
+	font-size: 1.5rem;
 	font-family: "Poiret One", cursive;
+	margin-left: 0.4%;
 }
 #deskTitle {
 	display: none;
