--- a/styleSheets/indexStyles.css
+++ b/styleSheets/indexStyles.css
@@ -1,9 +1,8 @@
 html, body {
 	height: 100%;
 	margin: 0;
-	background-color: #262626;
-	background-size: 100% 100%;
 	color: white;
+	background-color: #262626;
 	font-size: 100%;
 	font-family: "Ubuntu", sans-serif;
 }
@@ -11,6 +10,22 @@ section {
 	width: 100%;
 	height: 100%;
 	position: relative;
+}
+#landing {
+	background-color: #262626;
+	z-index: 2;
+}
+#about {
+	background-image: url(https://static01.nyt.com/packages/flash/Lens/2009/09/20090915-Showcase-Boogie/018-20090915-Showcase-Boogie.jpg);
+	background-attachment: fixed;
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+
+}
+#contact {
+	background-color: #c4351f;
+	z-index: 2;
 }
 span {
 	display: block;
@@ -36,18 +51,25 @@ span {
 	font-family: "Poiret One", cursive;
 	margin-left: 0.4%;
 }
-#deskTitle {
-	display: none;
-}
 #main h1, #nav ul {
 	width: 100%;
 	text-align: center;
 	position: absolute;
-	top: 50%;
+	top: 60%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -40%);
 	margin: 0;
 	padding: 0;
+}
+#main {
+	width: 100%;
+	height: 80%;
+	position: relative;
+}
+#nav {
+	width: 100%;
+	height: 20%;
+	position: relative;
 }
 li {
 	display: inline-block;
@@ -67,6 +89,56 @@ a:hover {
 	font-family: "Work Sans", sans-serif;
 	margin: 0 3% 0 3%;
 	font-size: 3rem;
-	color: #c4351f;
+	color: #424242;
 	vertical-align: middle;
+}
+@media only screen and (min-width: 980px) {
+	html {
+		font-size: 125%;
+	}
+	a {
+		font-size: 0.8rem;
+	}
+	.slash {
+		font-size: 2.4rem;
+	}
+	.pageTitle {
+		width: 100%;
+		height: 100%;
+		position: relative;
+	}
+	.pageTitle h1 {
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		margin: 0;
+		padding: 0;
+		font-family: "Poiret One", sans-serif;
+		font-size: 14.4rem;
+		text-transform: uppercase;
+		color: #c4351f;
+		opacity: 0.2;
+		z-index: 1;
+	}
+	#blurb {
+		width: 40%;
+		height: 82%;
+		position: relative;
+		padding: 10% 10% 0 10%;
+		text-align: center;
+		color: #262626;
+		z-index: 2;
+	}
+	#blurb a {
+		color: #262626;
+		border-color: #262626;
+		font-size: 0.8rem;
+	}
+	#aboutNav ul {
+		width: 100%;
+		text-align: center;
+		margin: 20% 0 0 0;
+		padding: 0;
+	}
 }
