--- a/styleSheets/indexStyles.css
+++ b/styleSheets/indexStyles.css
@@ -93,17 +93,66 @@ a:hover {
 	vertical-align: middle;
 }
 form {
+	height: 100%;
 	width: 100%;
 	text-align: center;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	color: #262626;
+}
+input, textarea {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	color: #262626;
-}
-input {
 	background-color: transparent;
 	border: none;
+	height: 2.1rem;
+	text-align: right;
+	font-family: "Ubuntu", sans-serif;
+	font-size: 2rem;
+	color: #262626;
+}
+input:focus, textarea:focus {
+	outline: none;
+}
+::-webkit-input-placeholder {
+	text-align: center;
+	font-family: "Ubuntu", sans-serif;
+	font-size: 2rem;
+	color: #262626;
+}
+:-moz-placeholder {
+}
+::-moz-placeholder {
+}
+#message, #phone, #ext, #email {
+	opacity: 0;
+}
+#userName {
+	height: 100%;
+	width: 164px;
+	z-index: 5;
+}
+#phone {
+	width: 130px;
+	z-index: 4;
+} 
+#ext {
+	width: 65px;
+	z-index: 3;
+}
+#email {
+	width: 88px;
+	z-index: 2;
+}
+#message {
+	height: 2.1rem;
+	width: 130px;
+	z-index: 1;
+	resize: none;
+	overflow: auto;
 }
 @media only screen and (min-width: 980px) {
 	html {
