--- a/styleSheets/indexStyles.css
+++ b/styleSheets/indexStyles.css
@@ -131,28 +131,32 @@ input:focus, textarea:focus {
 	opacity: 0;
 }
 #userName {
-	height: 100%;
 	width: 164px;
-	z-index: 5;
+	z-index: 9;
 }
 #phone {
 	width: 130px;
-	z-index: 4;
+	z-index: 7;
 } 
 #ext {
 	width: 65px;
-	z-index: 3;
+	z-index: 5;
 }
 #email {
 	width: 88px;
-	z-index: 2;
+	z-index: 3;
 }
 #message {
-	height: 2.1rem;
 	width: 130px;
 	z-index: 1;
 	resize: none;
 	overflow: auto;
+}
+#part {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 8;
 }
 #prev {
 	height: 100%;
