--- a/styleSheets/indexStyles.css
+++ b/styleSheets/indexStyles.css
@@ -40,6 +40,10 @@ span {
 	font-size: 4.05rem;
 	margin-left: 0.5%;
 }
+span.deltaXi {
+	color: #424242;
+	display: inline;
+}
 #last {
 	font-size: 7.6rem;
 	font-weight: 400;
@@ -159,12 +163,19 @@ input:focus, textarea:focus {
 	top: 83%;
 	transform: translateY(-50%, -50%);
 	padding: 0 15% 0 15%;
-	color: #262626;
+	color: #9a2918;
 	background-color: transparent;
-	border: 2px solid #262626;
-	border-radius: 4px;
+	border: 3px solid #9a2918;
+	border-top: none;
+	border-bottom: none;
+	border-radius: 8px;
 	z-index: 10;
 	display: none;
+}
+#done:hover, #done:focus {
+	outline: none;
+	color: #262626;
+	border-color: #262626;
 }
 #part {
 	position: absolute;
