--- a/styleSheets/indexStyles.css
+++ b/styleSheets/indexStyles.css
@@ -166,10 +166,7 @@ input:focus, textarea:focus {
 	padding: 0 15% 0 15%;
 	color: #9a2918;
 	background-color: transparent;
-	border: 3px solid #9a2918;
-	border-top: none;
-	border-bottom: none;
-	border-radius: 8px;
+	border: none;
 	z-index: 10;
 	display: none;
 }
@@ -185,8 +182,8 @@ input:focus, textarea:focus {
 	z-index: 8;
 }
 #prev {
-	height: 100%;
-	width: 100%;
+	height: 90%;
+	width: 90%;
 	padding: 5%;
 	display: none;
 }
