--- a/styleSheets/indexStyles.css
+++ b/styleSheets/indexStyles.css
@@ -100,6 +100,31 @@ a:hover, a:active, a:focus {
 	color: #424242;
 	vertical-align: middle;
 }
+.pageTitle {
+	position: relative;
+	height: 100%;
+	width: 100%;
+}
+#aHead {
+	position: fixed;
+	top: 90px;
+	left: -50px;
+	transform: rotate(90deg);
+	font-family: "Poiret One", sans-serif;
+	font-size: 5rem;
+	text-transform: uppercase;
+	color: #c4351f;
+	opacity: 0.2;
+	z-index: 1;
+}
+.pageTitle p {
+	height: 66%;
+	width: 90%;
+	color: #262626;
+	text-align: center;
+	margin: 0;
+	padding: 0 5% 0 5%;
+}
 form {
 	height: 100%;
 	width: 100%;
@@ -188,6 +213,7 @@ svg {
 	position: absolute;
 	top: 30px;
 	left: 30px;
+	fill: #262626;
 }
 #cHead {
 	position: relative;
@@ -226,7 +252,7 @@ svg {
 		height: 100%;
 		position: relative;
 	}
-	.pageTitle h2 {
+	#aHead {
 		position: fixed;
 		top: 50%;
 		left: 50%;
