--- a/styleSheets/indexStyles.css
+++ b/styleSheets/indexStyles.css
@@ -117,16 +117,25 @@ a:hover, a:active, a:focus {
 	font-size: 5rem;
 	text-transform: uppercase;
 	color: #c4351f;
-	opacity: 0.2;
-	z-index: 1;
+	opacity: 0.4;
+	z-index: 0;
 }
-.pageTitle p {
+#blurb {
+	position: absolute;
+	top: 33%;
 	height: 66%;
-	width: 90%;
+	width: 100%;
 	color: #262626;
 	text-align: center;
 	margin: 0;
-	padding: 0 5% 0 5%;
+}
+#blurb p {
+	margin: 0;
+	width: 90%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 form {
 	height: 100%;
