--- a/styleSheets/indexStyles.css
+++ b/styleSheets/indexStyles.css
@@ -17,9 +17,9 @@ section {
 	z-index: 2;
 }
 #about {
-	//background-image: url(https://static01.nyt.com/packages/flash/Lens/2009/09/20090915-Showcase-Boogie/018-20090915-Showcase-Boogie.jpg);
-	//background-attachment: fixed;
-	//background-position: center;
+	background-image: url("../images/deskAbout.jpg");
+	background-attachment: fixed;
+	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-color: white;
@@ -41,22 +41,22 @@ span {
 	font-size: 4.05rem;
 	margin-left: 0.5%;
 }
-span.deltaXi {
-	color: #424242;
-	display: inline;
-}
 #last {
 	font-size: 7.6rem;
 	font-weight: 400;
 	line-height: 70%;
 	letter-spacing: -0.5rem;
 }
+span.deltaXi {
+	color: #424242;
+	display: inline;
+}
 #title {
 	font-size: 1.5rem;
 	font-family: "Poiret One", cursive;
 	margin-left: 0.4%;
 }
-#main h1, #nav ul {
+#main h1, #mainNav ul {
 	width: 100%;
 	text-align: center;
 	position: absolute;
@@ -74,7 +74,7 @@ span.deltaXi {
 .nav {
 	display: none;
 }
-#mainNav {
+/*#mainNav {
 	width: 100%;
 	height: 20%;
 	position: relative;
@@ -102,7 +102,7 @@ a:hover, a:active, a:focus {
 	font-size: 3rem;
 	color: #424242;
 	vertical-align: middle;
-}
+}*/
 .pageTitle {
 	position: relative;
 	height: 100%;
@@ -137,6 +137,17 @@ a:hover, a:active, a:focus {
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
+#cHead {
+	position: relative;
+	top: 26%;
+	transform: translateY(-50%);
+	font-family: "Poiret One", sans-serif;
+	font-size: 6rem;
+	text-align: left;
+	color: #b02f1c;
+	margin-left: 15px;
+	line-height: 85%;
+}
 form {
 	height: 100%;
 	width: 100%;
@@ -169,8 +180,16 @@ input:focus, textarea:focus {
 	color: #262626;
 }
 :-moz-placeholder {
+	text-align: center;
+	font-family: "Ubuntu", sans-serif;
+	font-size: 2rem;
+	color: #262626;
 }
 ::-moz-placeholder {
+	text-align: center;
+	font-family: "Ubuntu", sans-serif;
+	font-size: 2rem;
+	color: #262626;
 }
 #message, #phone, #ext, #email {
 	opacity: 0;
@@ -227,17 +246,6 @@ svg {
 	left: 30px;
 	fill: #262626;
 }
-#cHead {
-	position: relative;
-	top: 26%;
-	transform: translateY(-50%);
-	font-family: "Poiret One", sans-serif;
-	font-size: 6rem;
-	text-align: left;
-	color: #b02f1c;
-	margin-left: 15px;
-	line-height: 85%;
-}
 #prev {
 	height: 90%;
 	width: 90%;
@@ -275,13 +283,13 @@ svg {
 		font-size: 14.4rem;
 		text-transform: uppercase;
 		color: #c4351f;
-		opacity: 0.2;
+		opacity: 0.3;
 		z-index: 1;
 	}
 	#blurb {
 		width: 40%;
 		height: 82%;
-		position: relative;
+		position: absolute;
 		padding: 10% 10% 0 10%;
 		text-align: center;
 		color: #262626;
