--- a/styleSheets/indexStyles.css
+++ b/styleSheets/indexStyles.css
@@ -7,6 +7,32 @@ html, body {
 	font-size: 100%;
 	font-family: "Ubuntu", sans-serif;
 }
+#goodBurger {
+	position: fixed;
+	height: 38px;
+	width: 31px;
+	top: 30px;
+	right: 34px;
+	z-index: 10;
+}
+#goodBurger span {
+	position: absolute;
+	display: block;
+	height: 3px;
+	width: 100%;
+	background: #262626;
+	opacity: 1;
+	z-index: 11;
+}
+#goodBurger span:nth-child(1) {
+	top: 6px;
+}
+#goodBurger span:nth-child(2), #goodBurger span:nth-child(3) {
+	top: 18px;
+}
+#goodBurger span:nth-child(4) {
+	top: 30px;
+}
 section {
 	width: 100%;
 	height: 100%;
@@ -17,7 +43,7 @@ section {
 	z-index: 2;
 }
 #about {
-	background-image: url("../images/deskAbout.jpg");
+	background-image: url("../images/mobileAbout.jpg");
 	background-attachment: fixed;
 	background-position: center;
 	background-size: cover;
@@ -36,6 +62,7 @@ span {
 	text-transform: uppercase;
 	color: #c4351f;
 	line-height: 75%;
+	cursor: default;
 }
 #first {
 	font-size: 4.05rem;
@@ -55,6 +82,7 @@ span.deltaXi {
 	font-size: 1.5rem;
 	font-family: "Poiret One", cursive;
 	margin-left: 0.4%;
+	cursor: default;
 }
 #main h1, #mainNav ul {
 	width: 100%;
@@ -110,15 +138,16 @@ a:hover, a:active, a:focus {
 }
 #aHead {
 	position: fixed;
-	top: 90px;
-	left: -50px;
+	top: 60px;
+	left: -30px;
 	transform: rotate(90deg);
 	font-family: "Poiret One", sans-serif;
-	font-size: 5rem;
+	font-size: 3rem;
 	text-transform: uppercase;
 	color: #c4351f;
 	opacity: 0.4;
 	z-index: 0;
+	cursor: default;
 }
 #blurb {
 	position: absolute;
@@ -128,6 +157,7 @@ a:hover, a:active, a:focus {
 	color: #262626;
 	text-align: center;
 	margin: 0;
+	cursor: default;
 }
 #blurb p {
 	margin: 0;
@@ -147,6 +177,7 @@ a:hover, a:active, a:focus {
 	color: #b02f1c;
 	margin-left: 15px;
 	line-height: 85%;
+	cursor: default;
 }
 form {
 	height: 100%;
@@ -245,6 +276,7 @@ svg {
 	top: 30px;
 	left: 30px;
 	fill: #262626;
+	cursor: pointer;
 }
 #prev {
 	height: 90%;
@@ -257,7 +289,7 @@ svg {
 	font-size: 1.2rem;
 	color: #262626;
 }
-@media only screen and (min-width: 980px) {
+/*@media only screen and (min-width: 980px) {
 	html {
 		font-size: 125%;
 	}
@@ -306,4 +338,4 @@ svg {
 		margin: 20% 0 0 0;
 		padding: 0;
 	}
-}
+}*/
