--- a/styleSheets/indexStyles.css
+++ b/styleSheets/indexStyles.css
@@ -7,7 +7,7 @@ html, body {
 	font-size: 100%;
 	font-family: "Ubuntu", sans-serif;
 }
-#goodBurger {
+.goodBurger {
 	position: fixed;
 	height: 38px;
 	width: 31px;
@@ -22,12 +22,20 @@ html, body {
     -ms-user-select: none;
     user-select: none;
 }
-#goodBurger span {
+#mainBurger span {
+	background: #c4351f;
+}
+#aboutBurger span {
+	background: #262626;
+}
+#contactBurger span {
+	background: #262626;
+}
+.goodBurger span {
 	position: absolute;
 	display: block;
 	height: 3px;
 	width: 100%;
-	background: #c4351f;
 	opacity: 1;
 	left: 0;
 	z-index: 11;
@@ -36,36 +44,40 @@ html, body {
 	-o-transition: .2s ease-in-out;
 	transition: .2s ease-in-out;
 }
-#goodBurger span:nth-child(1) {
+.goodBurger span:nth-child(1) {
 	top: 6px;
 }
-#goodBurger span:nth-child(2), #goodBurger span:nth-child(3) {
+.goodBurger span:nth-child(2), .goodBurger span:nth-child(3) {
 	top: 18px;
 }
-#goodBurger span:nth-child(4) {
+.goodBurger span:nth-child(4) {
 	top: 30px;
 }
-#goodBurger.open span:nth-child(1) {
+#mainBurger.open span:nth-child(1), #aboutBurger.open span:nth-child(1), #contactBurger.open span:nth-child(1) {
 	top: 18px;
 	width: 0px;
 	left: 50%;
+	background: #c4351f;
 }
-#goodBurger.open span:nth-child(2) {
+#mainBurger.open span:nth-child(2), #aboutBurger.open span:nth-child(2), #contactBurger.open span:nth-child(2) {
 	-webkit-transform: rotate(45deg);
 	-moz-transform: rotate(45deg);
 	-o-transform: rotate(45deg);
 	transform: rotate(45deg);
+	background: #c4351f;
 }
-#goodBurger.open span:nth-child(3) {
+#mainBurger.open span:nth-child(3), #aboutBurger.open span:nth-child(3), #contactBurger.open span:nth-child(3) {
 	-webkit-transform: rotate(-45deg);
 	-moz-transform: rotate(-45deg);
 	-o-transform: rotate(-45deg);
 	transform: rotate(-45deg);
+	background: #c4351f;
 }
-#goodBurger.open span:nth-child(4) {
+#mainBurger.open span:nth-child(4), #aboutBurger.open span:nth-child(4), #contactBurger.open span:nth-child(4) {
 	top: 18px;
 	width: 0px;
 	left: 50%;
+	background: #c4351f;
 }
 #mobileNav {
 	position: fixed;
@@ -73,7 +85,6 @@ html, body {
 	width: 100%;
 	top: 0px;
 	right: 0px;
-	overflow: hidden;
 	-webkit-transition: .2s ease-in-out;
 	-moz-transition: .2s ease-in-out;
 	-o-transition: .2s ease-in-out;
@@ -117,6 +128,7 @@ section {
 	width: 100%;
 	height: 100%;
 	position: relative;
+	overflow: hidden;
 }
 #landing {
 	background-color: #262626;
@@ -128,7 +140,7 @@ section {
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-color: white;
+	z-index: 2;
 }
 #contact {
 	background-color: #c4351f;
@@ -342,7 +354,7 @@ svg {
 	color: #262626;
 }
 @media only screen and (min-width: 550px) {
-	#goodBurger, #mobileNav {
+	.goodBurger, #mobileNav {
 		display: none;
 	}
 	.nav {
